--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,8 +17,9 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
       
-    - name: 'Build:dockerimage'
-    - uses: docker/build-push-action@v1
+    - 
+      name: 'Build:dockerimage'
+      uses: docker/build-push-action@v2
       with:
         registry: ghcr.io
         username: "dawidwozny"
