--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,9 +17,17 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
       
+    -
+      name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+      
+    -
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+      
     - 
       name: 'Build:dockerimage'
-      uses: docker/build-push-action@v1
+      uses: docker/build-push-action@v2
       with:
         registry: ghcr.io
         username: "dawidwozny"
